# Calendar_API

./: Cargo.toml  Dockerfile  development.Dockerfile  docker-compose.yml  init-test.sql  nginx.conf
.github/workflows/: cicd.yml
examples/: generate_openapi.rs
src/: lib.rs  main.rs
src/database/calendar/get/: mod.rs  query.rs  view.rs
src/database/event/: mod.rs
src/database/event/accept/: view.rs
src/database/event/add_member/: query.rs  view.rs
src/database/event/create/: query.rs  view.rs
src/database/event/delete/: view.rs
src/database/event/edit/: query.rs  view.rs
src/database/event/get/: query.rs  view.rs
src/database/event/get_event_members/: query.rs  view.rs
src/database/event/remove_member/: query.rs  view.rs
src/database/event/update_user_status/: query.rs  view.rs
src/endpoints/v1/: doc.rs  mod.rs
src/endpoints/v1/events/: doc.rs  mod.rs
src/endpoints/v1/events/id/: doc.rs  mod.rs
src/endpoints/v1/events/id/delete/: doc.rs  endpoint.rs
src/endpoints/v1/events/id/get/: doc.rs  endpoint.rs  view.rs
src/endpoints/v1/events/id/members/: doc.rs  mod.rs
src/endpoints/v1/events/id/members/get/: doc.rs  endpoint.rs  view.rs
src/endpoints/v1/events/id/patch/: doc.rs  endpoint.rs  view.rs
src/endpoints/v1/events/post/: doc.rs  endpoint.rs  view.rs
src/endpoints/v1/get/: doc.rs  endpoint.rs  view.rs
src/endpoints/v1/params/: doc.rs  mod.rs
tests/queries/calendar/: mod.rs
tests/queries/event/: add_member.rs  create.rs  get.rs  get_event_members.rs  mod.rs  remove_member.rs  update_status.rs
(+8 files in other folders)
