[package]
name = "calendar_api" #change api name
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
async-trait = "0.1.89"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
mairie360_api_lib = "0.8.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.0", features = ["postgres", "runtime-tokio", "chrono", "uuid"]}
tokio = { version = "1.46.0", features = ["full"] }
tokio-postgres = "0.7.16"
utoipa = { version = "5", features = ["actix_extras", "yaml"] }
utoipa-swagger-ui = { version = "9", features = ["actix-web"] }

[dev-dependencies]
once_cell = "1.21.3"
serial_test = "3.3.1"


[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
